--- a/app/assets/css/inc/_colors.scss
+++ b/app/assets/css/inc/_colors.scss
@@ -10,10 +10,12 @@ $text-on-dark: #999;
 $controls-btn-color: darken(white, 30%);
 $home-aside-color: #777;
 
-$equipped-background: #ECEFF1;
-$last-matches-background: #E8F5E9;
+$equipped-background: #E0F2F1;
+$last-matches-background: #FFF8E1;
 $stats-background: #E8EAF6;
 $maps-background: #E0F2F1;
+$this-week-background: #ECEFF1;
+$map-based-background: #ECEFF1;
 
 $header-bg: $main-dark;
 $footer-bg: $main-dark;
