Some more color tweaking on the tabs

--- a/app/assets/css/inc/_colors.scss
+++ b/app/assets/css/inc/_colors.scss
@@ -15,7 +15,7 @@ $last-matches-background: #E8F5E9;
 $stats-background: #E8EAF6;
 $maps-background: #E0F2F1;
 $this-week-background: #E0F2F1;
-$map-based-background: #FFEBEE;
+$map-based-background: #E0F7FA;
 
 $header-bg: $main-dark;
 $footer-bg: $main-dark;
