Better weapon type icon naming

--- a/app/components/player/overview.partial.html
+++ b/app/components/player/overview.partial.html
@@ -89,7 +89,7 @@
   <div class="row player-this-week__weapons" ng-repeat="weapon in player.lastWeapons">
     <div class=" col-xs-6">
       <img class="weapon-type-icon img-responsive"
-           ng-src="{{'assets/img/weapon-icons/' + weapon.itemTypeName.toLowerCase().replace(' ','-') + '.svg'}}"
+           ng-src="{{'assets/img/weapon-icons/' + weapon.itemTypeName + '.svg'}}"
            alt="{{weapon.itemTypeName}}"><!-- this isn't translated -->
     </div>
     <div class="col-xs-3">
@@ -103,7 +103,7 @@
     <div class="row player-this-week__weapons">
       <div class=" col-xs-6">
         <img class="weapon-type-icon img-responsive"
-             src="assets/img/weapon-icons/sniper-rifle.svg"
+             src="assets/img/weapon-icons/Sniper Rifle.svg"
              alt="{{'weaponKillsSniper' | translate}}">
       </div>
       <div class="col-xs-3">
@@ -116,7 +116,7 @@
     <div class="row player-this-week__weapons">
       <div class=" col-xs-6">
         <img class="weapon-type-icon img-responsive"
-             src="assets/img/weapon-icons/sword.svg"
+             src="assets/img/weapon-icons/Sword.svg"
              alt="{{'weaponKillsSword' | translate}}">
       </div>
       <div class="col-xs-3">
@@ -129,7 +129,7 @@
     <div class="row player-this-week__weapons">
       <div class=" col-xs-6">
         <img class="weapon-type-icon img-responsive"
-             src="assets/img/weapon-icons/sidearm.svg"
+             src="assets/img/weapon-icons/Sidearm.svg"
              alt="{{'weaponKillsSideArm' | translate}}">
       </div>
       <div class="col-xs-3">
