--- a/app/components/controls/top.partial.html
+++ b/app/components/controls/top.partial.html
@@ -25,7 +25,7 @@
           <div class="main-search__row">
             <div class="main-search__input">
               <input type="text" class="form-control" placeholder="{{fireteam[0].name || (!subdomain ? 'Enter your opponent\'s gamertag' : 'Enter your gamertag')}}"
-                     ng-model="mainPlayer" ng-value="(!fireteam[0] ? searchedPlayer : '')" ng-change="searchName(mainPlayer)"
+                     ng-model="mainPlayer" ng-value="(!fireteam[0] ? searchedPlayer : '')"
                      data-toggle="dropdown" autocorrect="off" autocomplete="off" spellcheck="false">
               <ul class="dropdown-menu" ng-if="playerNames">
                 <li class="dropdown-menu__label">Suggested Players</li>
