--- a/app/assets/css/elements/_block.scss
+++ b/app/assets/css/elements/_block.scss
@@ -95,6 +95,15 @@
   }
 }
 
+.block__footer--ad {
+  //margin-top: 2em;
+
+  .ad {
+    margin: auto;
+    padding: 0;
+  }
+}
+
 .block__link {
   @include inset-shadow();
   margin-left: -2em;
@@ -106,5 +115,22 @@
     color: #666;
     display: block;
     margin: 0;
+  }
+}
+
+@media all and (min-width: 960px) {
+  .block__footer--ad {
+    margin-top: 2em;
+
+    .ad {
+      margin: auto;
+      width: 520px;
+    }
+  }
+
+  .block__footer--ad-dark .ad-small {
+    margin: auto;
+    width: 320px;
+    height: 50px;
   }
 }
