--- a/app/components/controls/bottom.partial.html
+++ b/app/components/controls/bottom.partial.html
@@ -1,6 +1,6 @@
-<div class="block__footer-dark block__footer--ad-dark">
-  <div class="ad">
-    <adsense ad-client="ca-pub-7408805581120581" ad-slot="8795722555" ad-format="336x280" inline-style="width: 336px; height: 280px;"></adsense>
+<div class="block__footer-dark block__footer--ad-dark" style="min-width:336px;min-height:280px">
+  <div class="ad" style="min-width:336px;min-height:280px">
+    <adsense ad-client="ca-pub-7408805581120581" ad-slot="8795722555" inline-style="display:inline-block;width:336px;height:280px"></adsense>
   </div>
 </div>
 
