--- a/app/components/player/specific-stats.partial.html
+++ b/app/components/player/specific-stats.partial.html
@@ -11,7 +11,7 @@
 				 ng-class="{'is-irrelevant': !player.currentWeek.percent}">
 			<div class="player-tab__section"
 					 ng-show="$storage.visibility.all || $storage.visibility.weekly.weapons">
-			  <div class="row" ng-repeat="weapon in player.lastWeapons">
+			  <div class="row player-this-week__weapons" ng-repeat="weapon in player.lastWeapons">
 			    <div class="col-xs-6">
 			      <img class="weapon-type-icon img-responsive"
 			           ng-src="{{'assets/img/weapon-icons/' + weapon.itemTypeName + '.svg'}}"
@@ -24,8 +24,8 @@
 			      <span ng-bind="(weapon.sum_headshots / weapon.sum_kills) * 100 | number:2"></span>%
 			    </div>
 			  </div>
-			  <div ng-if="player.lastWeapons.length === 0">
-			    <div class="row player-this-week__weapons">
+			  <div ng-if="player.lastWeapons.length < 3">
+			    <div class="row player-this-week__weapons" ng-if="player.lastWeapons.length < 3">
 			      <div class=" col-xs-6">
 			        <img class="weapon-type-icon img-responsive"
 			             src="assets/img/weapon-icons/Sniper Rifle.svg"
@@ -38,7 +38,7 @@
 			        0
 			      </div>
 			    </div>
-			    <div class="row player-this-week__weapons">
+			    <div class="row player-this-week__weapons"  ng-if="player.lastWeapons.length < 2">
 			      <div class=" col-xs-6">
 			        <img class="weapon-type-icon img-responsive"
 			             src="assets/img/weapon-icons/Sword.svg"
@@ -51,7 +51,7 @@
 			        0
 			      </div>
 			    </div>
-			    <div class="row player-this-week__weapons">
+			    <div class="row player-this-week__weapons" ng-if="player.lastWeapons.length < 1">
 			      <div class=" col-xs-6">
 			        <img class="weapon-type-icon img-responsive"
 			             src="assets/img/weapon-icons/Sidearm.svg"
@@ -109,7 +109,7 @@
 				 ng-class="{'is-irrelevant': !player.currentWeek.percent}">
 			<div class="player-tab__section"
 					 ng-show="$storage.visibility.all || $storage.visibility.mapbased.weapons">
-			  <div class="row" ng-repeat="weapon in player.mapWeapons">
+			  <div class="row player-this-week__weapons" ng-repeat="weapon in player.mapWeapons">
 			    <div class="col-xs-6">
 			      <img class="weapon-type-icon img-responsive"
 			           ng-src="{{'assets/img/weapon-icons/' + weapon.itemTypeName + '.svg'}}"
@@ -122,8 +122,8 @@
 			      <span ng-bind="(weapon.sum_headshots / weapon.sum_kills) * 100 | number:2"></span>%
 			    </div>
 			  </div>
-			  <div ng-if="player.mapWeapons.length === 0">
-			    <div class="row player-this-week__weapons">
+			  <div ng-if="player.lastWeapons.length < 3">
+			    <div class="row player-this-week__weapons" ng-if="player.lastWeapons.length < 3">
 			      <div class=" col-xs-6">
 			        <img class="weapon-type-icon img-responsive"
 			             src="assets/img/weapon-icons/Sniper Rifle.svg"
@@ -136,7 +136,7 @@
 			        0
 			      </div>
 			    </div>
-			    <div class="row player-this-week__weapons">
+			    <div class="row player-this-week__weapons" ng-if="player.lastWeapons.length < 2">>
 			      <div class=" col-xs-6">
 			        <img class="weapon-type-icon img-responsive"
 			             src="assets/img/weapon-icons/Sword.svg"
@@ -149,7 +149,7 @@
 			        0
 			      </div>
 			    </div>
-			    <div class="row player-this-week__weapons">
+			    <div class="row player-this-week__weapons" ng-if="player.lastWeapons.length < 1">>
 			      <div class=" col-xs-6">
 			        <img class="weapon-type-icon img-responsive"
 			             src="assets/img/weapon-icons/Sidearm.svg"
