--- a/app/components/player/specific-stats.partial.html
+++ b/app/components/player/specific-stats.partial.html
@@ -136,7 +136,7 @@
 			        0
 			      </div>
 			    </div>
-			    <div class="row player-this-week__weapons" ng-if="player.lastWeapons.length < 2">>
+			    <div class="row player-this-week__weapons" ng-if="player.lastWeapons.length < 2">
 			      <div class=" col-xs-6">
 			        <img class="weapon-type-icon img-responsive"
 			             src="assets/img/weapon-icons/Sword.svg"
@@ -149,7 +149,7 @@
 			        0
 			      </div>
 			    </div>
-			    <div class="row player-this-week__weapons" ng-if="player.lastWeapons.length < 1">>
+			    <div class="row player-this-week__weapons" ng-if="player.lastWeapons.length < 1">
 			      <div class=" col-xs-6">
 			        <img class="weapon-type-icon img-responsive"
 			             src="assets/img/weapon-icons/Sidearm.svg"
