rename weapon icons

--- a/app/components/home/blog.partial.html
+++ b/app/components/home/blog.partial.html
@@ -67,7 +67,7 @@
               <div class="row top-weapons--map__row" ng-repeat="weapon in weapons">
                 <div class="col-xs-6 col-sm-4">
                   <img class="weapon-type-icon img-responsive"
-                       ng-src="assets/img/weapon-icons/{{weapon.weapon_type}}.svg"
+                       ng-src="assets/img/weapon-icons/{{weapon.file_name}}"
                        alt="{{weapon.weapon_type}}">
                 </div>
                 <div class="col-xs-3 col-sm-4 stat">
