--- a/app/components/player/specific-stats.partial.html
+++ b/app/components/player/specific-stats.partial.html
@@ -14,7 +14,7 @@
 			  <div class="row player-this-week__weapons" ng-repeat="weapon in player.lastWeapons">
 			    <div class="col-xs-6">
 			      <img class="weapon-type-icon img-responsive"
-			           ng-src="{{'assets/img/weapon-icons/' + weapon.itemTypeName + '.svg'}}"
+			           ng-src="{{'assets/img/weapon-icons/' + weapon.file_name}}"
 			           alt="{{weapon.itemTypeName}}"><!-- this isn't translated -->
 			    </div>
 			    <div class="col-xs-3">
@@ -28,7 +28,7 @@
 			    <div class="row player-this-week__weapons" ng-if="player.lastWeapons.length < 3">
 			      <div class=" col-xs-6">
 			        <img class="weapon-type-icon img-responsive"
-			             src="assets/img/weapon-icons/Sniper Rifle.svg"
+			             src="assets/img/weapon-icons/sniper-rifle.svg"
 			             alt="{{'weaponKillsSniper' | translate}}">
 			      </div>
 			      <div class="col-xs-3">
@@ -41,7 +41,7 @@
 			    <div class="row player-this-week__weapons"  ng-if="player.lastWeapons.length < 2">
 			      <div class=" col-xs-6">
 			        <img class="weapon-type-icon img-responsive"
-			             src="assets/img/weapon-icons/Sword.svg"
+			             src="assets/img/weapon-icons/sword.svg"
 			             alt="{{'weaponKillsSword' | translate}}">
 			      </div>
 			      <div class="col-xs-3">
@@ -54,7 +54,7 @@
 			    <div class="row player-this-week__weapons" ng-if="player.lastWeapons.length < 1">
 			      <div class=" col-xs-6">
 			        <img class="weapon-type-icon img-responsive"
-			             src="assets/img/weapon-icons/Sidearm.svg"
+			             src="assets/img/weapon-icons/sidearm.svg"
 			             alt="{{'weaponKillsSideArm' | translate}}">
 			      </div>
 			      <div class="col-xs-3">
@@ -112,7 +112,7 @@
 			  <div class="row player-this-week__weapons" ng-repeat="weapon in player.mapWeapons">
 			    <div class="col-xs-6">
 			      <img class="weapon-type-icon img-responsive"
-			           ng-src="{{'assets/img/weapon-icons/' + weapon.itemTypeName + '.svg'}}"
+			           ng-src="{{'assets/img/weapon-icons/' + weapon.file_name }}"
 			           alt="{{weapon.itemTypeName}}"><!-- this isn't translated -->
 			    </div>
 			    <div class="col-xs-3">
@@ -126,7 +126,7 @@
 			    <div class="row player-this-week__weapons" ng-if="player.lastWeapons.length < 3">
 			      <div class=" col-xs-6">
 			        <img class="weapon-type-icon img-responsive"
-			             src="assets/img/weapon-icons/Sniper Rifle.svg"
+			             src="assets/img/weapon-icons/sniper-rifle.svg"
 			             alt="{{'weaponKillsSniper' | translate}}">
 			      </div>
 			      <div class="col-xs-3">
@@ -139,7 +139,7 @@
 			    <div class="row player-this-week__weapons" ng-if="player.lastWeapons.length < 2">>
 			      <div class=" col-xs-6">
 			        <img class="weapon-type-icon img-responsive"
-			             src="assets/img/weapon-icons/Sword.svg"
+			             src="assets/img/weapon-icons/sword.svg"
 			             alt="{{'weaponKillsSword' | translate}}">
 			      </div>
 			      <div class="col-xs-3">
@@ -152,7 +152,7 @@
 			    <div class="row player-this-week__weapons" ng-if="player.lastWeapons.length < 1">>
 			      <div class=" col-xs-6">
 			        <img class="weapon-type-icon img-responsive"
-			             src="assets/img/weapon-icons/Sidearm.svg"
+			             src="assets/img/weapon-icons/sidearm.svg"
 			             alt="{{'weaponKillsSideArm' | translate}}">
 			      </div>
 			      <div class="col-xs-3">
