--- a/app/components/home/blog.partial.html
+++ b/app/components/home/blog.partial.html
@@ -1,13 +1,13 @@
 <div class="home__content">
   <article class="home__main">
     <div class="maps block blog-post shadow-z-1 {{mapInfoAnimClass}}">
-      <div class="modal-hero blog-image" ng-style="{'background-image': (currentMapInfo.week == 23 ? 'url(\'/assets/img/maps/week23.jpg\')' : 'url(' + currentMapInfo.pgcrImage + ')') }">
+      <div class="modal-hero blog-image" ng-style="{'background-image': (isMultiMap(currentMapInfo.week) ? 'url(\'/assets/img/maps/week23.jpg\')' : 'url(' + currentMapInfo.pgcrImage + ')') }">
         <div class="modal-hero__header">
-          <h2 class="modal-hero__title" ng-bind="currentMapInfo.week == 23 ? 'Assorted Playlist' : currentMapInfo.name"></h2>
+          <h2 class="modal-hero__title" ng-bind="isMultiMap(currentMapInfo.week) ? 'Assorted Playlist' : currentMapInfo.name"></h2>
           <span class="map-cycle-popover"
-                ng-if="currentMapInfo.week == 23"
+                ng-if="isMultiMap(currentMapInfo.week)"
                 title="Maps in cycle"
-                data-content="Burning Shrine<br>Widow's Court<br>Asylum<br>Rusted Lands<br>Pantheon"
+                data-content="{{multiMapList(currentMapInfo.week)}}"
                 bs-popover>
             <i class="material-icons md-16">&#xE148;</i>
           </span>
