--- a/app/components/home/blog.partial.html
+++ b/app/components/home/blog.partial.html
@@ -1,13 +1,15 @@
 <div class="home__content">
   <article class="home__main">
     <div class="maps block blog-post shadow-z-1 {{mapInfoAnimClass}}">
-      <div class="modal-hero blog-image" ng-style="{'background-image': (isMultiMap(currentMapInfo.week) ? 'url(\'/assets/img/maps/week23.jpg\')' : 'url(' + currentMapInfo.pgcrImage + ')') }">
+      <div class="modal-hero blog-image"
+           ng-style="{'background-image': (isPlaylist(currentMapInfo.week) ? 'url(' + getPlaylistHeader(currentMapInfo.week) + ')' : 'url(' + currentMapInfo.pgcrImage + ')') }">
         <div class="modal-hero__header">
-          <h2 class="modal-hero__title" ng-bind="isMultiMap(currentMapInfo.week) ? 'Assorted Playlist' : currentMapInfo.name"></h2>
+          <h2 class="modal-hero__title" ng-if="isPlaylist(currentMapInfo.week)">Assorted Playlist</h2><!-- translations needed -->
+          <h2 class="modal-hero__title" ng-if="!isPlaylist(currentMapInfo.week)" ng-bind="currentMapInfo.name"></h2>
           <span class="map-cycle-popover"
-                ng-if="isMultiMap(currentMapInfo.week)"
-                title="Maps in cycle"
-                data-content="{{multiMapList(currentMapInfo.week)}}"
+                ng-if="isPlaylist(currentMapInfo.week)"
+                data-content="{{getPlaylistPopover(currentMapInfo.week)}}"
+                data-placement="right"
                 bs-popover>
             <i class="material-icons md-16">&#xE148;</i>
           </span>
