change diff. to avg popover to reflect changes to backend

--- a/app/components/home/blog.partial.html
+++ b/app/components/home/blog.partial.html
@@ -48,7 +48,7 @@
             <h3 class="stat-header">
               Weapon usage by type
             </h3>
-            <span data-content="Percentages are based on usage of weapon types in relation to total kills in their category.<hr />Difference to the average represents how much more or less that specific weapon type is used on {{currentMapInfo.name || 'this map'}} in relation to all other Trials of Osiris maps." bs-popover>
+            <span data-content="Percentages are based on usage of weapon types in relation to total kills in their category.<hr />Difference to the average represents how much more or less that specific weapon type is used on {{currentMapInfo.name || 'this map'}} in relation to all other Trials of Osiris maps since the latest balance update." bs-popover>
               <i class="material-icons icon--small info">&#xE8FD;</i>
             </span>
           </div>
