--- a/app/components/player/specific-stats.partial.html
+++ b/app/components/player/specific-stats.partial.html
@@ -106,7 +106,7 @@
 					 analytics-on analytics-event="Click"
 					 analytics-category="This map">
 		<div class="player-tab--map-based"
-				 ng-class="{'is-irrelevant': !player.currentWeek.percent}">
+				 ng-class="{'is-irrelevant': !player.mapWeapons}">
 			<div class="player-tab__section"
 					 ng-show="$storage.visibility.all || $storage.visibility.mapbased.weapons">
 			  <div class="row player-this-week__weapons" ng-repeat="weapon in player.mapWeapons">
@@ -122,8 +122,8 @@
 			      <span ng-bind="(weapon.sum_headshots / weapon.sum_kills) * 100 | number:2"></span>%
 			    </div>
 			  </div>
-			  <div ng-if="player.lastWeapons.length < 3">
-			    <div class="row player-this-week__weapons" ng-if="player.lastWeapons.length < 3">
+			  <div ng-if="player.mapWeapons.length < 3">
+			    <div class="row player-this-week__weapons" ng-if="player.mapWeapons.length < 3">
 			      <div class=" col-xs-6">
 			        <img class="weapon-type-icon img-responsive"
 			             src="assets/img/weapon-icons/sniper-rifle.svg"
@@ -136,7 +136,7 @@
 			        0
 			      </div>
 			    </div>
-			    <div class="row player-this-week__weapons" ng-if="player.lastWeapons.length < 2">
+			    <div class="row player-this-week__weapons" ng-if="player.mapWeapons.length < 2">
 			      <div class=" col-xs-6">
 			        <img class="weapon-type-icon img-responsive"
 			             src="assets/img/weapon-icons/sword.svg"
@@ -149,7 +149,7 @@
 			        0
 			      </div>
 			    </div>
-			    <div class="row player-this-week__weapons" ng-if="player.lastWeapons.length < 1">
+			    <div class="row player-this-week__weapons" ng-if="player.mapWeapons.length < 1">
 			      <div class=" col-xs-6">
 			        <img class="weapon-type-icon img-responsive"
 			             src="assets/img/weapon-icons/sidearm.svg"
