Fix ability kills in matches tab

--- a/app/components/matches/matches.partial.html
+++ b/app/components/matches/matches.partial.html
@@ -13,7 +13,7 @@
     </div>
   </div>
   <div match-stats="player.activities.lastMatches"
-       player-abilities="player.inventory.subclass.abilities"
+       player-abilities="player.inventory.subclass.build"
        ng-if="player.activities.lastMatches">
   </div>
 </div>
