--- a/app/components/player/overview.partial.html
+++ b/app/components/player/overview.partial.html
@@ -10,15 +10,17 @@
             <img src="/assets/img/grimoire.png" alt="Grimoire">
             <span ng-bind="player.grimoire"></span>
           </span>
-          <div ng-repeat="hazard in player.nonHazard track by $index" ng-bind="hazard" class="player-hazard"
-               ng-class="{'player-hazard--developer': hazard === 'Developer' || hazard === 'Guardian.gg', 'player-hazard--donator': hazard === 'Donator'}"
-               data-placement="bottom" data-content="{{DestinyHazardDefinition[hazard]}}" bs-popover>
-          </div>
-          <div class="player-hazard player-hazard--charity1" ng-repeat="hazard in player.nonHazardCharity track by $index"
-               data-template-url="shared/popovers/charity1.popover.html"
-               data-placement="bottom"
-               ng-bind="hazard.status"
-               bs-popover>
+          <div class="supporter-container">
+            <div ng-repeat="hazard in player.nonHazard track by $index" ng-bind="hazard" class="player-hazard"
+                 ng-class="{'player-hazard--developer': hazard === 'Developer' || hazard === 'Guardian.gg', 'player-hazard--donator': hazard === 'Donator'}"
+                 data-placement="bottom" data-content="{{DestinyHazardDefinition[hazard]}}" bs-popover>
+            </div>
+            <div class="player-hazard player-hazard--charity1" ng-repeat="hazard in player.nonHazardCharity track by $index"
+                 data-template-url="shared/popovers/charity1.popover.html"
+                 data-placement="bottom"
+                 ng-bind="hazard.status"
+                 bs-popover>
+            </div>
           </div>
         </div>
         <div class="player-level">
