update donation link

--- a/app/components/controls/bottom.partial.html
+++ b/app/components/controls/bottom.partial.html
@@ -5,13 +5,13 @@
 </div>
 
 <div class="donate">
-  <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=5UR8BVAZQHBUW&lc=US&currency_code=USD" target="_blank"
+  <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=MNKJ7R6TA4XJE" target="_blank"
      analytics-on analytics-event="Click" analytics-category="Donate">
     <div class="donate__title">
       Help us run this site, donate with <img src="/assets/img/paypal.svg" alt="PayPal">
     </div>
     <div class="donate__descr">
-      You get a sexy&nbsp;&nbsp;<div class="player-hazard player-hazard--donator">Donator</div>&nbsp;badge if you leave your gamertag with the donation!</label>
+      You get a sexy&nbsp;&nbsp;<div class="player-hazard player-hazard--donator">Donator</div>&nbsp;badge if you donate $1 or more and leave your gamertag with the donation!</label>
     </div>
   </a>
 </div>
