--- a/app/components/inventory/armor.template.html
+++ b/app/components/inventory/armor.template.html
@@ -2,7 +2,7 @@
   <div class="weapon armor col-xs-12">
     <div class="armor__img">
       <img class="img-responsive"
-           ng-src="{{exoticArmor.definition.icon}}"
+           ng-src="{{'https://www.bungie.net' + exoticArmor.definition.icon}}"
            alt="{{exoticArmor.definition.name}}">
     </div>
     <div class="weapon__info">
@@ -13,7 +13,7 @@
         <div class="weapon-perk" ng-repeat="node in exoticArmor.nodes track by $index"
              title="{{node.name}}" data-content="{{node.description}}" bs-popover>
           <i class="weapon-perk__icon">
-            <img class="img-responsive" ng-src="{{node.icon}}" alt="{{node.name}}">
+            <img class="img-responsive" ng-src="{{'https://www.bungie.net' + node.icon}}" alt="{{node.name}}">
           </i>
         </div>
       </div>
