--- a/app/components/inventory/armor.template.html
+++ b/app/components/inventory/armor.template.html
@@ -2,7 +2,7 @@
   <div class="weapon armor col-xs-12">
     <div class="armor__img">
       <img class="img-responsive"
-           ng-src="{{'https://www.bungie.net' + exoticArmor.definition.icon}}"
+           ng-src="{{exoticArmor.definition.icon}}"
            alt="{{exoticArmor.definition.name}}">
     </div>
     <div class="weapon__info">
