--- a/app/components/matches/matchStats.template.html
+++ b/app/components/matches/matchStats.template.html
@@ -58,7 +58,7 @@
          ng-repeat="specialWeapon in abilityKills track by $index">
       <div class="row">
         <div class="col-xs-6 last-weapon-weapon__descr">
-          <span class="last-match-weapon__img" ng-style="{'background-image':'url(\'' + specialWeapon.icon + '\')'}"></span>
+          <span class="last-match-weapon__img" ng-style="{'background-image':'url(\'https://www.bungie.net' + specialWeapon.icon + '\')'}"></span>
           <span class="last-match-weapon__title" ng-bind="specialWeapon.name"></span>
         </div>
         <div class="col-xs-2 stat">
