--- a/app/components/controls/top.partial.html
+++ b/app/components/controls/top.partial.html
@@ -1,5 +1,5 @@
 <div class="header__content shadow-z-2">
-  <div class="title-bar" ng-class="{'is-week-23': isMultiMap()}" ng-style="{'background-image': (isMultiMap() ? 'url(\'/assets/img/maps/week23.jpg\')' : 'url(https://www.bungie.net/' + currentMap.pgcrImage + ')') }">
+  <div class="title-bar" ng-class="{'is-week-23': isPlaylist()}" ng-style="{'background-image': (isPlaylist() ? 'url(\'/assets/img/maps/week23.jpg\')' : 'url(https://www.bungie.net/' + currentMap.pgcrImage + ')') }">
     <div class="title-bar__content">
       <div class="title-bar__title">
         <a href="/" target="_self">
