Done with weapons part

--- a/app/assets/css/pages/_infographic.scss
+++ b/app/assets/css/pages/_infographic.scss
@@ -20,6 +20,24 @@
     line-height: 2.1;
   }
 
+  .stat big {
+    font-size: 4.5em;
+  }
+
+  .infographic-stat-medium {
+    big {
+      font-size: 2em;
+    }
+  }
+
+  .infographic-weapon-big {
+    font-size: 1.75em;
+  }
+
+  .infographic-weapon-leaderboard img {
+    margin: .5em auto 0 auto;
+  }
+
   .home__aside {
     order: 99;
   }
@@ -39,7 +57,7 @@
 
   .infographic__section {
     margin-top: 3em;
-    box-shadow: -5px -5px 20px rgba(0, 0, 0, .25);
+    box-shadow: -5px -5px 20px rgba(0, 0, 0, .25), inset 0 -70px 40px -50px rgba(0, 0, 0, 0.75);
     min-height: 0;
 
     h2 {
@@ -55,7 +73,7 @@
 
   @media (max-width: 991px) {
     .col-xs-6:nth-child(n+3) {
-        margin-top: 1em;
+        margin-top: 0;
     }
   }
 }
